# Figment

./: Cargo.toml
src/: coalesce.rs  error.rs  figment.rs  jail.rs  lib.rs  metadata.rs  profile.rs  provider.rs  util.rs
src/providers/: data.rs  env.rs  mod.rs  serialized.rs
src/value/: de.rs  escape.rs  magic.rs  mod.rs  parse.rs  ser.rs  tag.rs  value.rs
tests/: enum.rs  profile-tag.rs
