[package]
name = "figment"
version = "0.10.6"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2018"
documentation = "https://docs.rs/figment/0.10"
description = "A configuration library so con-free, it's unreal."
repository = "https://github.com/SergioBenitez/Figment"
readme = "README.md"
keywords = ["config", "configuration", "toml", "json", "yaml"]
license = "MIT OR Apache-2.0"
categories = ["config"]

[features]
env = ["pear", "parse-value"]
json = ["serde_json"]
yaml = ["serde_yaml"]
parse-value = ["pear"]
test = ["tempfile", "parking_lot"]
# toml = ["toml"] -> usable once we can select the dependency as dep:toml

[dependencies]
serde = { version = "1.0.136" }
uncased = "0.9.6"
pear = { version = "0.2.3", optional = true }
toml = { version = "0.5.8", optional = true }
serde_json = { version = "1.0.78", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
tempfile = { version = "3.3.0", optional = true }
parking_lot = { version = "0.12.0", optional = true }

[target.'cfg(any(target_pointer_width = "8", target_pointer_width = "16", target_pointer_width = "32"))'.dependencies]
atomic = "0.5.1"

[dev-dependencies]
tempfile = "3.3.0"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }

[build-dependencies]
version_check = "0.9.4"

[package.metadata.docs.rs]
all-features = true
